force-app/main/default/objects/Vendor_Compensation__c/Vendor_Compensation__c.object-meta.xml
<CustomObject>
    <description>This object is intended to hold data from our financials system for compensation purposes and integrate with xactly external tool</description>
    <label>Vendor Compensation</label>
    <nameField>
        <displayFormat>VC{000000000}</displayFormat>
        <label>Vendor Comensation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Compensation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>