force-app/main/default/objects/Vendor_Compensation__c/fields/Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Type__c</fullName>
    <label>Incentive Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>