force-app/main/default/objects/Vendor_Compensation__c/fields/Vendor_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Customer_Id__c</fullName>
    <label>Vendor Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>