force-app/main/default/objects/Vendor_Compensation__c/fields/Vendor_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_Number__c</fullName>
    <label>Vendor Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>